# jump

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  SHELL_INTEGRATION.md  install.ps1  install.sh  libshell.rlib  readme.md
.github/workflows/: release.yml  tests.yml
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  index.css
frontend/app/src/components/: BottomCTA.tsx  CTA.tsx  Demo.tsx  DocsSidebar.tsx  Features.tsx  Header.tsx  Hero.tsx  LandingPage.tsx  theme-provider.tsx
frontend/app/src/components/docs/: JumpDemo.tsx
frontend/app/src/layouts/: DocsLayout.tsx
frontend/app/src/pages/docs/: BasicCommands.tsx  HowItWorks.tsx  Installation.tsx  Introduction.tsx
shell/: jump.fish  jump.sh
src/: app.rs  cli.rs  config.rs  fs.rs  fuzzy.rs  input.rs  labels.rs  lib.rs  main.rs  number.rs  scoring.rs  shell.rs  ui.rs
src/database/: db.rs  entry.rs  mod.rs
src/fuzzy/: matcher.rs  mod.rs
src/shell/: tests.rs
src/ui/: browse.rs  fuzzy.rs  mod.rs  number.rs
