[package]
name = "jump"
version = "1.1.0"
edition = "2021"
description = "A minimal, Vim-inspired directory navigation tool for the terminal"
license = "MIT"
repository = "https://github.com/JoseMaurette1/jump"
keywords = ["terminal", "navigation", "vim", "tui"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
walkdir = "2.5"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
fuzzy-matcher = "0.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
